RESOLVED FIXED146083
Repro crash when swiping back from a NY Times article @ WebPageProxy::navigationGestureDidEnd
https://bugs.webkit.org/show_bug.cgi?id=146083
Summary Repro crash when swiping back from a NY Times article @ WebPageProxy::navigat...
Tim Horton
Reported 2015-06-17 15:43:52 PDT
Repro crash when swiping back from a NY Times article @ WebPageProxy::navigationGestureDidEnd
Attachments
Patch (2.89 KB, patch)
2015-06-17 15:44 PDT, Tim Horton
darin: review+
Tim Horton
Comment 1 2015-06-17 15:44:07 PDT
Tim Horton
Comment 2 2015-08-15 17:02:32 PDT
Note You need to log in before you can comment on or make changes to this bug.